--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -7,11 +7,11 @@ const {} = Astro.props;
 
 <div class="mx-auto mt-32 max-w-7xl sm:mt-56 sm:px-6 lg:px-8">
     <div
-            class="relative overflow-hidden bg-gray-200 px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20">
+            class="relative overflow-hidden bg-brand-pale px-6 py-20 shadow-xl sm:rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20">
         <img class="absolute inset-0 h-full w-full object-cover"
              src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80"
              alt="">
-        <div class="absolute inset-0 bg-gray-900/50 mix-blend-multiply"></div>
+        <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
             <img class="h-12 w-auto" src="./logo-128x128.png" alt="">
             <figure>
