--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ const {} = Astro.props;
                                 class="h-16 w-auto max-w-full sm:h-20"
                             />
                             <div class="inline-flex flex-wrap items-center gap-4">
-                                <span class="rounded-full bg-brand-navy/90 px-3 py-1 text-sm font-semibold leading-6 text-white ring-1 ring-inset ring-brand-navy">Welcome</span>
+                                <span class="rounded-full bg-brand-navy/90 px-3 py-1 text-sm font-semibold leading-6 text-white ring-1 ring-inset ring-brand-navy">Join the community</span>
                                 <a
                                     href="https://luma.com/user/cryptomondayszh"
                                     target="_blank"
@@ -52,7 +52,7 @@ const {} = Astro.props;
                         <h1 class="mt-10 text-4xl font-roboto tracking-tight text-brand-navy sm:text-6xl">
                             Switzerland’s most active blockchain, crypto &amp; Web3 community
                         </h1>
-                        <p class="mt-6 text-lg text-brand-navy/80">From local meetups to global reach! CryptoMondays Zurich now connects our community through online webinars and in-person events alike.
+                        <p class="mt-6 text-lg text-brand-navy/80">From local meetups to global reach! CryptoMondays Zurich connects our community through online webinars and in-person events alike.
                         </p>
                         <div class="mt-10 flex items-center gap-x-6">
                             <a href="#"
