--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -13,7 +13,7 @@ const {} = Astro.props;
              alt="">
         <div class="absolute inset-0 bg-brand-navy/60 mix-blend-multiply"></div>
         <div class="relative mx-auto max-w-2xl lg:mx-0">
-            <img class="h-12 w-auto" src="./logo-128x128.png" alt="">
+            <img class="h-12 w-auto" src="/assets/cryptomondays-logo.png" alt="CryptoMondays Zurich logo">
             <figure>
                 <blockquote class="mt-6 text-lg font-semibold text-white sm:text-xl sm:leading-8">
                     <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a.
