--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,8 @@ const {title} = Astro.props;
 
 <div class="bg-white">
   <!-- Header -->
-  <header class="relative z-50">
-    <nav class="flex items-center justify-between px-6 py-4 lg:px-8 lg:py-6" aria-label="Global">
+  <header class="absolute inset-x-0 top-0 z-50">
+    <nav class="flex items-center justify-between px-6 py-3 lg:px-8 lg:py-4" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="/" class="-m-1.5 p-1.5">
           <span class="sr-only">CryptoMondays Zurich</span>
