--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,7 +97,7 @@ const {title} = Astro.props;
     </div>
   </header>
 
-  <main class="isolate">
+  <main class="isolate mt-4 sm:mt-5 lg:mt-6">
     <slot />
   </main>
 
