--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -8,14 +8,14 @@ const {} = Astro.props;
 <div class="mx-auto mt-12 max-w-7xl px-6 sm:mt-32 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
         <h2 class="text-base font-semibold leading-7">
-            <span class="bg-brand-navy text-white px-4 py-1 rounded-full">Faster communication</span>
+            <span class="bg-brand-navy text-white px-4 py-1 rounded-full">About CryptoMondays Zurich</span>
         </h2>
         <p class="mt-2 text-3xl font-roboto tracking-tight text-brand-navy sm:text-4xl">
-            Everything you need to talk with your customers
+            A global force across 50+ cities, building the future of crypto and Web3 together
         </p>
         <p class="mt-6 text-lg leading-8 font-nunito text-brand-navy/80">
-            Quis tellus eget adipiscing convallis sit sit eget aliquet
-            quis. Suspendisse eget egestas a elementum pulvinar et feugiat blandit at. In mi viverra elit nunc.
+            Grounded in Zurich’s vibrant ecosystem, we unite curious minds 
+            to drive connection, collaboration, and meaningful change.
         </p>
     </div>
     <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
@@ -30,11 +30,11 @@ const {} = Astro.props;
                                   d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z"/>
                         </svg>
                     </div>
-                    Secure backups
+                    Creating a vibrant community
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-brand-navy/80">
-                    Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna
-                    massa nunc massa.
+                    Since 2022, our monthly events have brought together over 3,000 members, 
+                    building Zurich’s most active crypto and Web3 network.
                 </dd>
             </div>
             <div class="relative pl-16">
@@ -47,11 +47,11 @@ const {} = Astro.props;
                                   d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"/>
                         </svg>
                     </div>
-                    SSL certificates
+                    Learn from Industry Leaders
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-brand-navy/80">
-                    Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam
-                    turpis enim lacus amet.
+                    40+ events, 18+ partners, and countless insights 
+                    covering L1s, rollups, DeFi, TradFi, VC, security, and protocol innovation.
                 </dd>
             </div>
             <div class="relative pl-16">
@@ -64,11 +64,11 @@ const {} = Astro.props;
                                   d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99"/>
                         </svg>
                     </div>
-                    Simple queues
+                    Network with Like-Minded Professionals
                 </dt>
                 <dd class="mt-2 text-base leading-7 text-brand-navy/80">
-                    Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo
-                    diam neque.
+                    Our events attract up to 120 attendees because great ideas grow 
+                    when people connect with those who share their passion.
                 </dd>
             </div>
             <div class="relative pl-16">
@@ -81,11 +81,11 @@ const {} = Astro.props;
                                   d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33"/>
                         </svg>
                     </div>
-                    Advanced security
+                    Volunteer Driven
                 </dt>
-                <dd class="mt-2 text-base leading-7 text-brand-navy/80">Arcu egestas dolor vel iaculis in ipsum mauris.
-                    Tincidunt
-                    mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.
+                <dd class="mt-2 text-base leading-7 text-brand-navy/80">
+                    Fueled by passion and purpose, our board and core team are volunteers committed 
+                    to growing Zurich’s crypto community.
                 </dd>
             </div>
         </dl>
